--- a/.github/workflows/probar-secreto.yml
+++ b/.github/workflows/probar-secreto.yml
@@ -1,1 +1,10 @@
+name: Probar Secreto
 
+on: [push] # Se ejecuta cada vez que hagas un push
+
+jobs:
+  test-secret:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Verificar secreto
+        run: echo "Mi secreto es ${{ secrets.MI_TOKEN }}"
