--- a/.github/workflows/probar-secreto.yml
+++ b/.github/workflows/probar-secreto.yml
@@ -1,10 +1,23 @@
 name: Probar Secreto
 
-on: [push] # Se ejecuta cada vez que hagas un push
+on: [push]
 
 jobs:
   test-secret:
     runs-on: ubuntu-latest
     steps:
-      - name: Verificar secreto
-        run: echo "Mi secreto es ${{ secrets.MI_TOKEN }}"
+      - name: Verificar existencia de secreto
+        id: check-secret
+        run: |
+          if [ -z "${{ secrets.MI_TOKEN }}" ]; then
+            echo "::error::El secreto MI_TOKEN no está configurado"
+            exit 1
+          else
+            echo "Secreto detectado (valor oculto por seguridad)"
+          fi
+      
+      - name: Mostrar prueba segura
+        if: steps.check-secret.outcome == 'success'
+        run: echo "El secreto existe con longitud ${#SECRET} caracteres" && echo "::add-mask::${{ secrets.MI_TOKEN }}"
+        env:
+          SECRET: ${{ secrets.MI_TOKEN }}
