--- a/.github/workflows/probar-secreto.yml
+++ b/.github/workflows/probar-secreto.yml
@@ -1,11 +1,14 @@
-name: Probar Secreto
+name: Generar y Desplegar Contenido
 
 on: [push]
 
 jobs:
-  test-secret:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout del repositorio
+        uses: actions/checkout@v3
+
       - name: Verificar existencia de secreto
         id: check-secret
         run: |
@@ -15,9 +18,25 @@ jobs:
           else
             echo "Secreto detectado (valor oculto por seguridad)"
           fi
-      
-      - name: Mostrar prueba segura
+
+      - name: Instalar dependencias
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+
+      - name: Obtener artículos de la API de GitHub
         if: steps.check-secret.outcome == 'success'
-        run: echo "El secreto existe con longitud ${#SECRET} caracteres" && echo "::add-mask::${{ secrets.MI_TOKEN }}"
+        run: |
+          curl -H "Authorization: token ${{ secrets.MI_TOKEN }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               https://api.github.com/repos/ReinierTutoriales/webReinierTutoriales/contents/_posts > posts.json
+          jq '[.[] | select(.name | endswith(".md")) | {name: .name, download_url: .download_url}]' posts.json > articles.json
         env:
-          SECRET: ${{ secrets.MI_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MI_TOKEN }}
+
+      - name: Desplegar en GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
+          keep_files: true
