--- a/.github/workflows/probar-secreto.yml
+++ b/.github/workflows/probar-secreto.yml
@@ -2,6 +2,11 @@ name: Generar y Desplegar Contenido
 
 on: [push]
 
+# Agrega permisos explícitos para el GITHUB_TOKEN
+permissions:
+  contents: write  # Permite escribir en el repositorio
+  pages: write    # Permite actualizar GitHub Pages
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -39,4 +44,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
-          keep_files: true
+          force_orphan: true
